--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,8 @@
 export("BaBA")
 export("strtns")
 export("movement.segment.b")
+import(raster)
+import(sp)
+import(rgdal)
+import(rgeos)
+import(adehabitatLT)
