--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,10 @@ Imports:
     sp,
     rgdal,
     rgeos,
-    adehabitatLT
+    adehabitatLT,
+    sf,
+    dplyr,
+    tidyr
 License: MIT
 Encoding: UTF-8
 LazyData: true
