--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Barrier Behavior Analysis (BaBA)
 Version: 0.1.0
 Author: Wenjing Xu and Valentine Herrmann
 Maintainer: The package maintainer <wenjing.xu@berkeley.edu> and <herrmannV@si.edu>
-Description: The function opf this package tries to classify animal movement behaviors near barriers into 7 different categories: Bounce, Quick Cross, Back-and-forth, Trace, Trap, Average Movement and  unknown.
+Description: This package conducts barrier behavior analysis (BaBA) that identifies and classifies animal movement near linear barriers (e.g. fences, roads, railroads, pipelines, rivers, etc.) into one of the following categories: Bounce, Quick Cross, Back-and-forth, Trace, Trap, Average Movement and unknown. This information can be used to examine permeabilities of barriers to animal movement.
 Imports:
     raster,
     sp,
