--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Wenjing Xu and Valentine Herrmann
 Maintainer: The package maintainer <wenjing.xu@berkeley.edu> and <herrmannV@si.edu>
 Description: This package conducts barrier behavior analysis (BaBA) that identifies and classifies animal movement near linear barriers (e.g. fences, roads, railroads, pipelines, rivers, etc.) into one of the following categories: Bounce, Quick Cross, Back-and-forth, Trace, Trap, Average Movement and unknown. This information can be used to examine permeabilities of barriers to animal movement.
-Imports:
+Depends:
     raster,
     sp,
     rgdal,
