--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,13 @@ Author: Wenjing Xu and Valentine Herrmann
 Maintainer: The package maintainer <wenjing.xu@berkeley.edu> and <herrmannV@si.edu>
 Description: This package conducts barrier behavior analysis (BaBA) that identifies and classifies animal movement near linear barriers (e.g. fences, roads, railroads, pipelines, rivers, etc.) into one of the following categories: Bounce, Quick Cross, Back-and-forth, Trace, Trap, Average Movement and unknown. This information can be used to examine permeabilities of barriers to animal movement.
 Depends:
-    R (>= 2.10),
-    rgdal
+    R (>= 2.10)
 Imports:
-    raster,
-    sp,
-    rgeos,
-    adehabitatLT,
-    sf,
     dplyr,
+    magrittr,
+    rlang,
+    scales,
+    sf,
     tidyr
 License: MIT
 Encoding: UTF-8
