--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,13 +1,3 @@
 export("BaBA")
-export("strtns")
-export("movement.segment.b")
-export("range01")
 export("BaRanking")
-import(raster)
-import(sp)
-import(rgdal)
-import(rgeos)
-import(adehabitatLT)
-import(sf)
-import(tidyverse)
-import(rlang)
+importFrom(magrittr, "%>%")
